[package]
name = "rugfx"
version = "0.0.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
unwrap_used = "warn"

[features]
default = ["capture"]

# Capture screenshots
capture = ["dep:png"]

# Unstable features
unstable = []

[dependencies]
wgpu = { version = "0.20", default-features = false, features = ["wgsl", "dx12", "metal"]}
winit = "0.30"
thiserror = "1.0"
pollster = "0.3"
png = { version = "0.17", optional = true }
log = "0.4"

[dev-dependencies]
softbuffer = "0.4"
