[package]
name = "rugfx"
version = "0.0.0"
edition = "2021"
publish = false

[lints.rust]
unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[lints.clippy]
# Cargo
# cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[features]
default = ["capture"]

# Capture screenshots
capture = ["dep:png"]

# Unstable features
unstable = []

[dependencies]
wgpu = { version = "24.0", default-features = false, features = ["wgsl", "dx12", "metal"]}
winit = "0.30"
thiserror = "2.0"
pollster = "0.4"
png = { version = "0.17", optional = true }
log = "0.4"

[dev-dependencies]
softbuffer = "0.4"
